Fix rendering bug with modal on Firefox

--- a/src/views/Give/Give.scss
+++ b/src/views/Give/Give.scss
@@ -1418,11 +1418,6 @@
       height: auto;
     }
   }
-
-  .ohm-modal {
-    max-width: 688px;
-    opacity: 0.9;
-  }
 }
 
 .subnav-paper {
